correccion de footer

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
       </p>
       <section class="section_contact--index">
         <ul class="contact_index">
-          <li class="item_contact--index"><a href="#"><img class="icon_social" src="./imagenes/imagenesindex/iconosindex/iconolinkedin.png" alt="icono de linkedin"></a></li>
-          <li class="item_contact--index"><a href="#"><img class="icon_social" src="./imagenes/imagenesindex/iconosindex/iconooutlook.png" alt="icono de outlook"></a></li>
-          <li class="item_contact--index"><a href="#"><img class="icon_social" src="./imagenes/imagenesindex/iconosindex/iconox.png" alt="icono de x"></a></li>
-          <li class="item_contact--index"><a href="#"><img class="icon_social" src="./imagenes/imagenesindex/iconosindex/iconogit.png" alt="icono de github"></a></li>
+          <li class="item_contact--index"><a href="#"><img class="icon_footer" src="./imagenes/imagenesindex/iconosindex/iconolinkedin.png" alt="icono de linkedin"></a></li>
+          <li class="item_contact--index"><a href="#"><img class="icon_footer" src="./imagenes/imagenesindex/iconosindex/iconooutlook.png" alt="icono de outlook"></a></li>
+          <li class="item_contact--index"><a href="#"><img class="icon_footer" src="./imagenes/imagenesindex/iconosindex/iconox.png" alt="icono de x"></a></li>
+          <li class="item_contact--index"><a href="#"><img class="icon_footer" src="./imagenes/imagenesindex/iconosindex/iconogit.png" alt="icono de github"></a></li>
         </ul>
       </section>
     </section></div>
