--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -72,10 +72,10 @@
         <a target="_blank" href="https://icons8.com/icon/111057/x"></a> iconos de <a target="_blank" href="https://icons8.com">Icons8</a>
       </div>
         <ul class="contact_index">
-        <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconolinkedin.png" alt="icono de linkedin"></a></li>
-        <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconooutlook.png" alt="icono de outlook"></a></li>
-        <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconox.png" alt="icono de x"></a></li>
-        <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconogit.png" alt="icono de github"></a></li>
+        <li class="item_contact--index"><a href="#"><img class="icon_footer" src="../imagenes/imagenesindex/iconosindex/iconolinkedin.png" alt="icono de linkedin"></a></li>
+        <li class="item_contact--index"><a href="#"><img class="icon_footer" src="../imagenes/imagenesindex/iconosindex/iconooutlook.png" alt="icono de outlook"></a></li>
+        <li class="item_contact--index"><a href="#"><img class="icon_footer" src="../imagenes/imagenesindex/iconosindex/iconox.png" alt="icono de x"></a></li>
+        <li class="item_contact--index"><a href="#"><img class="icon_footer" src="../imagenes/imagenesindex/iconosindex/iconogit.png" alt="icono de github"></a></li>
         </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
