Agrego habilidad git

--- a/HTML/aboutme.html
+++ b/HTML/aboutme.html
@@ -46,7 +46,7 @@
       <h1 id="aboutme" class="title_noindex title_principal animate__animated animate__fadeInLeft">Sobre mi</h1>
       <section class="presentation_aboutme animate__animated animate__fadeInUp animate__delay-1s">
         <div class="div_presentation">
-          <img class="photo_aboutme" src="../imagenes/imagenessobremi/Foto.jpg" alt="foto retrato de hernan">
+          <img class="photo_aboutme" src="../imagenes/imagenesindex/fotoretrato.jpg" alt="foto retrato de hernan">
         </div>
         <div class="div_presentation">
           <h2 class="subtitle subtitle_aboutme golden_letter">Actualidad</h2>
@@ -65,6 +65,7 @@
               <img class="img_skills" src="../imagenes/imagenessobremi/iconohabilidades/iconocss.png" alt="icono de css"/>
               <img class="img_skills" src="../imagenes/imagenessobremi/iconohabilidades/iconosass.png" alt="icono de sass"/>
               <img class="img_skills" src="../imagenes/imagenessobremi/iconohabilidades/iconobootstrap.png" alt="icono de bootstrap"/>
+              <img class="img_skills" src="../imagenes/imagenessobremi/iconohabilidades/iconogit.png" alt="icono de git"/>
             </div>
             <div class="skills">
               <h3 class="title_skills">Especializado en</h3>
