--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -55,7 +55,7 @@
           </form>
         </section>
         <section class="section_networks">
-          <img src="../imagenes/imagenmarca/hcwhite.png" alt="imagen marca hernan coceres">
+          <img class="img_marca" src="../imagenes/imagenmarca/hcwhite.png" alt="imagen marca hernan coceres">
           <div class="div_section--networks animate__animated animate__flipInX animate__delay-2s"><p class="sub_subtitle text_contact">También podes encontrarme en</p>
             <ul class="contact_index">
             <li class="item_contact--index"><a href="https://www.linkedin.com/in/hernan-coceres-26307b314/" target="_blank"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconolinkedin.png" alt="icono de linkedin"></a></li>
