--- a/HTML/opinion.html
+++ b/HTML/opinion.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Soy Hernan Coceres, desarrollador frontend, en esta web vas a ver opiniones sobre mi trabajo como programador. Y tambien vas a poder contactarme.">
     <title>Hernan Coceres</title>
     <link rel="icon" href="../imagenes/favicon/favicon.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
