--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Soy Hernan Coceres, desarrollador frontend, en esta web vas a conocer mis proyectos, trabajos y habilidades. Tambien podras contactarme.">
     <title>Hernan Coceres</title>
     <link rel="icon" href="./imagenes/favicon/favicon.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
