--- a/HTML/aboutme.html
+++ b/HTML/aboutme.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Soy Hernan Coceres, desarrollador frontend, en esta web podras conocer mis habilidades y objetivos como programador. Y tambien vas a poder contactarme.">
+    <meta name="keywords" content="Hernan, Coceres, desarrollador, frontend, front-end, portafolio, contacto, contactame, habilidades, html, css, javascript, sass, bootstrap, python, git, experiencia, web">
+    <meta name="author" content="Hernan Coceres">
     <title>Hernan Coceres</title>
     <link rel="icon" href="../imagenes/favicon/favicon.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
