--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Hernan, Coceres, desarrollador, frontend, front-end, portafolio, contacto, contactame, proyectos, proyecto, habilidades, web">
     <meta name="author" content="Hernan Coceres">
     <title>Hernan Coceres</title>
+    <script src="./js/script.js"></script>
     <link rel="icon" href="../imagenes/favicon/favicon.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
